--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="info-canal">
           <img 
           class="avatar"
-          src="https://media.licdn.com/dms/image/D4D0BAQGWWA3gGWJ3Sg/company-logo_200_200/0/1701903187680/rocketseat_logo?e=2147483647&v=beta&t=p1j1Qkllo9dpLLJjDpHvan_y0p0WkhABxPjYWj_HkHc" alt="">
+          src="https://media.licdn.com/dms/image/D4D0BAQGWWA3gGWJ3Sg/company-logo_200_200/0/1701903187680/rocketseat_logo?e=2147483647&v=beta&t=p1j1Qkllo9dpLLJjDpHvan_y0p0WkhABxPjYWj_HkHc" alt="video 1">
           <div class="title-canal">
             <h6>Como aprender a programar em 2024</h6>
             <p>Rocketseat</p>
@@ -61,7 +61,7 @@
         <img src="https://i.ytimg.com/vi/oM4HDgXTAQQ/maxresdefault.jpg">
           <img 
           class="avatar"
-          src="https://media.licdn.com/dms/image/D4D0BAQGWWA3gGWJ3Sg/company-logo_200_200/0/1701903187680/rocketseat_logo?e=2147483647&v=beta&t=p1j1Qkllo9dpLLJjDpHvan_y0p0WkhABxPjYWj_HkHc" alt="">
+          src="https://media.licdn.com/dms/image/D4D0BAQGWWA3gGWJ3Sg/company-logo_200_200/0/1701903187680/rocketseat_logo?e=2147483647&v=beta&t=p1j1Qkllo9dpLLJjDpHvan_y0p0WkhABxPjYWj_HkHc" alt="video 2">
           <div class="title-canal">
             <h6>Por dentro do Explorer</h6>
             <p>Rocketseat</p>
@@ -77,11 +77,16 @@
         <span>Home</span>
       </div>
       <div>
-        <ion-icon name="home"></ion-icon>
-        <span>Home</span>
+        <ion-icon name="add"></ion-icon>
+      </div>
+      <div>
+        <ion-icon name="albuns-outline"></ion-icon>
+        <span>Subscriptions</span>
       </div>
     </footer>
 
-        
+  <script src="assets/script.js">
+
+  </script>
 </body>
 </html>
